[tool.poetry]
name = "repl-nix-big-bird"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_big_bird"}]

[tool.poetry.dependencies]
python = "^3.10"
snscrape = "^0.7.0.20230622"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
